plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '4.1.0'
}

group = 'io.dsub.opendiscogs'
version = '0.1.8'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    mockitoAgent
}

ext {
    set('testcontainersVersion', '2.0.5')
    set('classGraphVersion', '4.8.186')
    set('jooqVersion', '3.21.6')
    set('pbVersion', '0.10.2')
    set('openDiscogsJooqVersion', '0.0.5')
    set('oshiVersion', '7.4.2')
    set('postgresqlVersion', '42.7.13')
}

repositories {
    mavenCentral()
}

dependencies {
    implementation platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
    annotationProcessor platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
    testAnnotationProcessor platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
    mockitoAgent platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
    implementation(
            'org.springframework.boot:spring-boot-starter-batch',
            'org.springframework.boot:spring-boot-starter-jooq',
            "org.jooq:jooq:${jooqVersion}",
            "io.dsub.opendiscogs:open-discogs-jooq:${openDiscogsJooqVersion}",
            'org.springframework:spring-oxm',
            'jakarta.xml.bind:jakarta.xml.bind-api',
            'org.glassfish.jaxb:jaxb-runtime',
            "io.github.classgraph:classgraph:${classGraphVersion}",
            "me.tongfei:progressbar:${pbVersion}",
            'org.liquibase:liquibase-core',
            "com.github.oshi:oshi-core:${oshiVersion}",
            'org.apache.commons:commons-lang3'
    )
    runtimeOnly "org.postgresql:postgresql:${postgresqlVersion}"
    compileOnly 'org.projectlombok:lombok'
    compileOnly 'org.jspecify:jspecify'
    testCompileOnly 'org.projectlombok:lombok'
    testImplementation platform("org.testcontainers:testcontainers-bom:${testcontainersVersion}")
    testImplementation (
            'org.springframework.boot:spring-boot-starter-test',
            'org.springframework.batch:spring-batch-test',
            'org.testcontainers:testcontainers',
            'org.testcontainers:testcontainers-postgresql',
            'org.testcontainers:testcontainers-junit-jupiter'
    )
    annotationProcessor (
            'org.springframework.boot:spring-boot-configuration-processor',
            'org.projectlombok:lombok'
    )
    testAnnotationProcessor 'org.projectlombok:lombok'
    mockitoAgent('org.mockito:mockito-core') {
        transitive = false
    }
}

tasks.withType(Test).configureEach {
    jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-Xlint:deprecation', '-Xlint:removal', '-Werror']
}

test {
    useJUnitPlatform {
        excludeTags 'e2e'
    }
}

tasks.register('e2eTest', Test) {
    description = 'Runs tests that access live external services.'
    group = 'verification'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform {
        includeTags 'e2e'
    }
    testLogging {
        events 'passed', 'skipped', 'failed'
        exceptionFormat = 'full'
        showStandardStreams = true
    }
    shouldRunAfter test
}

tasks.register('validateTestNaming') {
    description = 'Checks executable test classes use the correct suffix and E2E tag.'
    group = 'verification'
    def projectPath = projectDir.toPath()
    def testSources = fileTree('src/test/java') {
        include '**/*.java'
    }
    inputs.files(testSources)
    doLast {
        def executableTestSources = testSources.findAll { file ->
            def source = file.getText('UTF-8')
            (source =~ /@(Test|ParameterizedTest|RepeatedTest|TestFactory)\b/).find()
        }
        def invalidNames = executableTestSources.findAll { file ->
            !(file.name ==~ /.*(UnitTest|IntegrationTest|E2ETest)\.java/)
        }
        def invalidLanes = executableTestSources.findAll { file ->
            def source = file.getText('UTF-8')
            def isE2ETest = file.name.endsWith('E2ETest.java')
            def hasE2ETag =
                    (source =~ /@Tag\s*\(\s*(?:value\s*=\s*)?["']e2e["']\s*\)/).find()
            isE2ETest != hasE2ETag
        }
        if (!invalidNames.isEmpty()) {
            def names = invalidNames.collect {
                projectPath.relativize(it.toPath())
            }.sort().join('\n - ')
            throw new GradleException(
                    "Test classes must end in UnitTest, IntegrationTest, or E2ETest:\n - ${names}")
        }
        if (!invalidLanes.isEmpty()) {
            def names = invalidLanes.collect {
                projectPath.relativize(it.toPath())
            }.sort().join('\n - ')
            throw new GradleException(
                    "Only E2ETest classes must declare @Tag(\"e2e\"):\n - ${names}")
        }
    }
}

check.dependsOn validateTestNaming
check.dependsOn jacocoTestReport
check.dependsOn jacocoTestCoverageVerification

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    violationRules {
        rule {
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.85
            }
            limit {
                counter = 'BRANCH'
                value = 'COVEREDRATIO'
                minimum = 0.40
            }
        }
    }
}

bootBuildImage {
    imageName = "open-discogs-batch:${project.version}"
}
